# hearth

./: .dockerignore  .env.example  .gitignore  .sops.yaml  Cargo.toml  Makefile  README.md  compose.dev.yml  compose.yml
.cargo/: config.toml
backend/: Cargo.toml  Dockerfile
backend/examples/: seed_dev.rs
backend/migrations/: 0001_users.sql  0002_refresh_tokens.sql  0003_messages.sql
backend/src/: app.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  seed.rs  state.rs
backend/src/auth/: dto.rs  handlers.rs  middleware.rs  mod.rs  service.rs
backend/src/chat/: entity.rs  repository.rs
backend/src/presence/: registry.rs  ws.rs
backend/src/security/: jwt.rs  password.rs
backend/src/signaling/: hub.rs  message.rs  mod.rs
backend/src/users/: dto.rs  entity.rs  handlers.rs  mod.rs  repository.rs
backend/tests/: auth.rs  chat.rs  db.rs  health.rs  presence.rs  signaling.rs  users.rs  users_admin.rs  voice.rs
backend/tests/common/: mod.rs
desktop/: Cargo.toml  README.md  build.rs
desktop/src/: app.rs  config.rs  main.rs  theme.rs
desktop/src/ui/: channels.rs  chat.rs  login.rs  members.rs  meter.rs  mod.rs  screenshare_picker.rs  self_panel.rs  settings.rs  stage.rs  workspace.rs
docs/: STATUS.md  VISION.md
docs/dev/: voice-test.md
docs/findings/: voice-latency-linux.md
docs/reference/: README.md  vesktop-source.txt
docs/research/: voice-transport.md
docs/runbooks/: private-network-headscale.md
docs/superpowers/plans/: 2026-06-21-hearth-backend-foundation-and-media-spike.md  2026-06-21-hearth-m3-signaling.md  2026-06-21-hearth-m4-networked-engine.md  2026-06-21-hearth-m5-desktop-shell.md  2026-06-22-hearth-m6-discord-group-experience.md  2026-06-22-hearth-m7-voice-processing-screenshare.md  2026-06-23-hearth-m7p1-screenshare-settings-polish.md  2026-06-23-hearth-m7p2-picker-freeze-fix.md  2026-06-23-hearth-m8-screenshare-gpu-capture.md  2026-06-23-hearth-x11-gpu-capture-spike.md  2026-06-24-native-pipewire-voice.md  2026-06-24-voice-dsp-profiles.md  2026-06-25-dockerize-backend-postgres.md  2026-06-25-mic-speaker-volume.md  2026-06-25-private-network-headscale.md
docs/superpowers/specs/: 2026-06-21-hearth-design.md  2026-06-21-hearth-m5-desktop-shell-design.md  2026-06-22-hearth-m6-discord-group-experience-design.md  2026-06-22-hearth-m7-voice-processing-screenshare-design.md  2026-06-23-hearth-x11-gpu-capture-spike.md  2026-06-24-native-pipewire-voice-design.md  2026-06-24-voice-dsp-profiles-design.md  2026-06-25-dockerize-backend-postgres-design.md  2026-06-25-mic-speaker-volume-design.md  2026-06-25-private-network-headscale-design.md
docs/superpowers/spikes/: x11-gpu-capture-findings.md
engine/: Cargo.toml  README.md
engine-spike/: Cargo.toml  README.md
engine-spike/src/: encoders.rs  main.rs  pipeline.rs
engine/docs/: windows-setup.md
engine/examples/: x11_gpu_capture_spike.rs
engine/src/: capture.rs  encoders.rs  flow.rs  flow_peer.rs  hotkey.rs  lib.rs  main.rs  net.rs  peer.rs  session.rs  signaling.rs  voice_udp.rs
engine/src/audio/: capture.rs  classify.rs  devices.rs  drift.rs  dsp.rs  gate.rs  jitter.rs  mod.rs  monitor.rs  native.rs  native_voice.rs  profile.rs  rt.rs  speex_aec.rs  voice_packet.rs  voicebench.rs  wasapi3.rs  webrtc_aec.rs
engine/src/audio/native/: mod.rs  native_pw.rs  native_wasapi.rs
engine/src/screen/: audio.rs  audio_win.rs  backend.rs  capture.rs  mod.rs  source.rs  sources.rs  thumbnail.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
scripts/dev/: build-gtk4-plugin.ps1  launch-test.ps1  launch-test.sh  mint-tokens.sh  package-windows.ps1  seed-users.ps1  win-env.ps1
scripts/measure/: Measure audio delay.bat  Measure audio delay.desktop  README.md  audio_delay.py  audio_delay.sh  loopback_latency.py  test_loopback_latency.py  wasapi3.ps1
