[package]
name = "hearth-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "hearth_backend"
path = "src/lib.rs"

[[bin]]
name = "hearth-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "macros"] }
uuid = { version = "1", features = ["v7", "serde"] }
time = { version = "0.3", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
