[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-webrtc = "0.23"
gstreamer-sdp = "0.23"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v7", "serde"] }
base64 = "0.22"
hearth-protocol = { path = "../protocol" }
webrtc-audio-processing = { version = "0.3", features = ["bundled"] }
x11rb = { version = "0.13", features = ["composite", "xfixes", "randr", "dri3"] }

# Spike-only: the X11 GPU-capture feasibility example (engine/examples/).
# Kept out of the shipped library build.
[dev-dependencies]
khronos-egl = { version = "6", features = ["dynamic"] }
gstreamer-allocators = "0.23"
libloading = "0.8"
