[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-webrtc = "0.23"
gstreamer-sdp = "0.23"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v7", "serde"] }
base64 = "0.22"
# Native-path Opus codec (Phase 2): bundles + builds libopus, so the native
# voice path doesn't depend on GStreamer's opusenc/opusdec.
audiopus = "0.2"
# Pure-Rust RNNoise noise suppression for the native capture path. No C deps, so
# it builds the same on X11/Wayland/Windows.
nnnoiseless = { version = "0.5", default-features = false }
# Pure-Rust voice activity detection (fast, tiny NN). 16 kHz / 256-sample frames.
earshot = "0.1"
# Acoustic echo cancellation (speexdsp). Build needs cmake + libclang +
# /D_USE_MATH_DEFINES — win-env.ps1 sets all three.
aec-rs = "0.1"
hearth-protocol = { path = "../protocol" }

# Voice DSP (AEC/NS/AGC/VAD). The `bundled` build uses autotools and only links
# under a Unix toolchain, so it is gated off Windows; `audio/dsp.rs` falls back
# to a passthrough there (GStreamer `webrtcdsp` is the planned replacement).
[target.'cfg(not(target_os = "windows"))'.dependencies]
webrtc-audio-processing = { version = "0.3", features = ["bundled"] }

# X11 is Linux-only: global push-to-talk grab (hotkey.rs) and window
# enumeration (screen/sources.rs). Gated so the crate builds on Windows/macOS,
# where those paths fall back to platform stubs.
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["composite", "xfixes", "randr", "dri3"] }
# Native low-latency voice I/O on Linux: a pipewire-rs capture/playback pair with
# a pinned small quantum, replacing the GStreamer pulsesrc path (which drifts in
# latency over a long session). Needs `libpipewire-0.3-dev` at build time.
pipewire = "0.8"
libspa = "0.8"
# Zero-copy reinterpret of mapped PipeWire buffers as f32 slices.
bytemuck = "1"

# Windows global push-to-talk uses a WH_KEYBOARD_LL low-level keyboard hook;
# per-app screenshare audio enumerates WASAPI audio sessions over COM.
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Security", # SECURITY_ATTRIBUTES in CreateEventW (IAudioClient3 spike)
] }

# Spike-only: the X11 GPU-capture feasibility example (engine/examples/).
# Kept out of the shipped library build, and only built on Linux.
[target.'cfg(target_os = "linux")'.dev-dependencies]
khronos-egl = { version = "6", features = ["dynamic"] }
gstreamer-allocators = "0.23"
libloading = "0.8"
